[tool.poetry]
name = "rosa-health-tracker"
version = "0.1.0"
description = "Tracking Rosa's luxating petela frequency"
authors = ["Zack Hankin <zthankin@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
